fixed hero-content z-index so burger menu would overlap correctly

--- a/modal.css
+++ b/modal.css
@@ -474,6 +474,7 @@ input {
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
+  z-index: 1;
 }
 .hero-content {
   padding: 51px 67px;
